--- a/WordStatistics/src/MainFrame.form
+++ b/WordStatistics/src/MainFrame.form
@@ -126,6 +126,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Show Statistics"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ShowBtnActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
