--- a/WordStatistics/src/ResultFrame.form
+++ b/WordStatistics/src/ResultFrame.form
@@ -4,9 +4,6 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Result"/>
-    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1200, 500]"/>
-    </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1200, 500]"/>
     </Property>
@@ -94,12 +91,12 @@
         <Component class="javax.swing.JTable" name="DirectoryTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="8" rowCount="6">
+              <Table columnCount="8" rowCount="0">
                 <Column editable="false" title="N" type="java.lang.Integer"/>
                 <Column editable="false" title="Directory name" type="java.lang.String"/>
                 <Column editable="false" title="Number of words" type="java.lang.Long"/>
-                <Column editable="false" title="Longest word" type="java.lang.String"/>
-                <Column editable="false" title="Shortest word" type="java.lang.String"/>
+                <Column editable="false" title="Latest Longest word" type="java.lang.String"/>
+                <Column editable="false" title="Latest Shortest word" type="java.lang.String"/>
                 <Column editable="false" title="Number of &apos;is&apos;" type="java.lang.Long"/>
                 <Column editable="false" title="Number of &apos;are&apos;" type="java.lang.Long"/>
                 <Column editable="false" title="Number of &apos;you&apos;" type="java.lang.Long"/>
@@ -149,6 +146,7 @@
                 </Column>
               </TableColumnModel>
             </Property>
+            <Property name="showGrid" type="boolean" value="true"/>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
             </Property>
@@ -169,12 +167,12 @@
         <Component class="javax.swing.JTable" name="FileTable">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="8" rowCount="10">
+              <Table columnCount="8" rowCount="0">
                 <Column editable="false" title="N" type="java.lang.Integer"/>
                 <Column editable="false" title="File name" type="java.lang.String"/>
                 <Column editable="false" title="Number of words" type="java.lang.Long"/>
-                <Column editable="false" title="Longest word" type="java.lang.String"/>
-                <Column editable="false" title="Shortest word" type="java.lang.String"/>
+                <Column editable="false" title="Latest Longest word" type="java.lang.String"/>
+                <Column editable="false" title="Latest Shortest word" type="java.lang.String"/>
                 <Column editable="false" title="Number of &apos;is&apos;" type="java.lang.Long"/>
                 <Column editable="false" title="Number of &apos;are&apos;" type="java.lang.Long"/>
                 <Column editable="false" title="Number of &apos;you&apos;" type="java.lang.Long"/>
@@ -231,6 +229,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="FileTablePropertyChange"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
